TP/7/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Frase
Rule 1     Frase -> Elementos
Rule 2     Elementos -> Elementos OP Elemento
Rule 3     Elementos -> Elemento
Rule 4     Elemento -> NUM

Terminals, with rules where they appear

NUM                  : 4
OP                   : 2
error                : 

Nonterminals, with rules where they appear

Elemento             : 2 3
Elementos            : 1 2
Frase                : 0

Parsing method: LALR

state 0

    (0) S' -> . Frase
    (1) Frase -> . Elementos
    (2) Elementos -> . Elementos OP Elemento
    (3) Elementos -> . Elemento
    (4) Elemento -> . NUM

    NUM             shift and go to state 4

    Frase                          shift and go to state 1
    Elementos                      shift and go to state 2
    Elemento                       shift and go to state 3

state 1

    (0) S' -> Frase .



state 2

    (1) Frase -> Elementos .
    (2) Elementos -> Elementos . OP Elemento

    $end            reduce using rule 1 (Frase -> Elementos .)
    OP              shift and go to state 5


state 3

    (3) Elementos -> Elemento .

    OP              reduce using rule 3 (Elementos -> Elemento .)
    $end            reduce using rule 3 (Elementos -> Elemento .)


state 4

    (4) Elemento -> NUM .

    OP              reduce using rule 4 (Elemento -> NUM .)
    $end            reduce using rule 4 (Elemento -> NUM .)


state 5

    (2) Elementos -> Elementos OP . Elemento
    (4) Elemento -> . NUM

    NUM             shift and go to state 4

    Elemento                       shift and go to state 6

state 6

    (2) Elementos -> Elementos OP Elemento .

    OP              reduce using rule 2 (Elementos -> Elementos OP Elemento .)
    $end            reduce using rule 2 (Elementos -> Elementos OP Elemento .)

